--- a/parallax.demo.css
+++ b/parallax.demo.css
@@ -49,6 +49,8 @@ body {
     background-repeat: no-repeat;
     background-size: 35%;
     background-position: bottom 25% right 20%;
+
+    animation: clouds 3s 1;
 }
 
 .parallax-clouds-space {
@@ -58,6 +60,8 @@ body {
     background-repeat: no-repeat;
     background-size: 55%;
     background-position: bottom 20% left;
+
+    animation: clouds 3s 1;
 }
 
 .parallax-clouds {
@@ -67,6 +71,8 @@ body {
     background-repeat: no-repeat;
     background-size: 75%;
     background-position: bottom left;
+
+    animation: clouds 3s 1;
 }
 
 .parallax-right-cloud {
@@ -76,6 +82,8 @@ body {
     background-repeat: no-repeat;
     background-size: 32%;
     background-position: bottom 10% right;
+
+    animation: clouds 3s 1;
 }
 
 .parallax-bottom-cloud {
@@ -94,6 +102,8 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom center;
+
+    animation: mountains 3s 1;
 }
 
 .overflow-bottom-cloud {
@@ -118,4 +128,28 @@ body {
     height: 100vh;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) calc(100% - 50px), rgba(255, 255, 255, 1) 100%), url(parallax.demo/bottom-cloud.png) no-repeat bottom center;
     background-size: contain;
+
+    animation: clouds 3s 1;
+}
+
+@keyframes mountains {
+    0% {
+        opacity: 0;
+        background-position: bottom 150% center;
+    }
+    100% {
+        opacity: 1;
+        background-position: bottom center;
+    }
+}
+
+@keyframes clouds {
+    0% {
+        /*opacity: 0;*/
+        height: 130vh;
+    }
+    100% {
+        /*opacity: 1;*/
+        height: 100vh;
+    }
 }
