iOS scrolling fix

--- a/parallax.demo.css
+++ b/parallax.demo.css
@@ -20,6 +20,7 @@ body {
     overflow-y: auto;
     -webkit-perspective: var(--perspective);
     perspective: var(--perspective);
+    -webkit-overflow-scrolling: touch;
 }
 
 .parallax__group {
