--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -11,6 +11,8 @@
     background: url("../img/100. Chetwode Blue.png") no-repeat center/cover;
 
     overflow: hidden;
+
+    position: fixed;
 }
 
 body {
@@ -21,6 +23,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+
+    position: fixed;
 }
 
 a {
