--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -17,6 +17,8 @@
 body {
     margin: unset;
     padding: var(--padding);
+    padding-bottom: 70px;
+
 
     display: flex;
     flex-direction: column;
