--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -10,7 +10,7 @@
     font-family: "SF Pro Text", -apple-system, sans-serif;
 
     overflow: hidden;
-    position: fixed;
+    /*position: fixed;*/
 }
 
 body {
