--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -18,7 +18,7 @@ body {
     padding: var(--padding);
     padding-bottom: 90px;
 
-    background: url("../img/100. Chetwode Blue.png") no-repeat center/cover;
+    background: url("../img/100. Chetwode Blue.png") no-repeat center/100% 100%;
 
     display: flex;
     flex-direction: column;
