--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,25 +7,34 @@
     --text-color: white;
     --padding: 20px;
 
+    display: flex;
+
     color: var(--text-color);
     font-family: "SF Pro Text", -apple-system, sans-serif;
 
-    overflow: hidden;
+    /*overflow: hidden;*/
 
-    background: rgb(71, 55, 142);
+    background-color: rgb(71, 55, 142);
+    background-image: url("../img/100. Chetwode Blue.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+
+    height: 100vh;
 }
 
 body {
-    margin: unset;
     padding: var(--padding);
-    padding-bottom: 90px;
-
-    background: url("../img/100. Chetwode Blue.png") no-repeat center/100% 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+
+    height: 100%;
+    width: 100%;
+    max-width: 600px;
+
+    margin: auto;
 }
 
 a {
@@ -76,39 +85,110 @@ header figure {
 main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+
+    height: 100%;
+
+    margin: var(--padding) 0;
+}
+
+main .menu {
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
 
     height: 100%;
-    margin: 10px 0;
 }
 
-main.menu a {
+main .menu a {
     font-size: 38px;
     font-weight: 900;
     line-height: 1em;
 }
 
-main.menu a span {
+main .menu a:after {
+    display: block;
     font-size: 24px;
+    margin-top: 5px;
+}
+
+a.works-link:after {
+    content: '🛠 🧪 🏗 👶🏻 🖥 🖼 🖱';
+}
+
+a.projects-link:after {
+    content: '🛰 🚀 🌐 🦈 📢';
 }
 
 footer {
     --size: 40px;
 
-    display: flex;
-    justify-content: space-between;
-
     height: var(--size);
     min-height: var(--size);
 }
 
-footer a {
-    display: inline-block;
+nav.icons {
+    display: flex;
+    justify-content: space-between;
 }
 
-footer a img {
+.icons .github {
+    background-image: url("../img/github.svg");
+}
+
+.icons .twitter {
+    background-image: url("../img/twitter.svg");
+}
+
+.icons .facebook {
+    background-image: url("../img/facebook.svg");
+}
+
+.icons .linkedin {
+    background-image: url("../img/linkedin.svg");
+}
+
+.icons .telegram {
+    background-image: url("../img/telegram.svg");
+}
+
+footer a {
     display: inline-block;
 
     width: var(--size);
     height: var(--size);
+
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+@media (orientation: landscape) and (max-height: 500px) {
+    main .menu a:after {
+        display: inline-block;
+        margin-left: var(--padding);
+    }
+}
+
+@media (min-height: 800px) {
+    body {
+        max-height: 800px;
+    }
+}
+
+@media (min-width: 768px) {
+    body {
+        align-items: center;
+        text-align: center;
+    }
+
+    nav.icons {
+        min-width: calc(var(--size) * 5 * 2);
+    }
+}
+
+@media (min-height: 580px) {
+    main .menu {
+        height: 400px;
+    }
 }
