Header desktop style additional fix

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -179,7 +179,8 @@ footer a {
     }
 
     .profile .caption {
-        font-size: 20px;
+        font-size: 18px;
+        font-weight: 200;
     }
 
 }
