--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,6 +19,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
+    background-attachment: fixed;
 
     height: 100vh;
 }
@@ -166,6 +167,12 @@ footer a {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+}
+
+@media (max-height: 280px) {
+    body {
+        height: initial;
+    }
 }
 
 @media (min-width: 350px) {
