--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -169,7 +169,7 @@ footer a {
     background-position: center;
 }
 
-@media (max-height: 280px) or (max-width: 520px) and (max-height: 320px) {
+@media (max-height: 280px), (max-width: 520px) and (max-height: 320px) {
     body {
         height: initial;
     }
