--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -218,6 +218,10 @@ footer a {
     background-position: center;
 }
 
+footer a:hover {
+    filter: drop-shadow(0px 0px 2px white);
+}
+
 @media (max-height: 280px), (max-width: 520px) and (max-height: 400px) {
     body {
         /*height: initial;*/
